# setu

./: .env.example  .gitignore  SETU_Build_Plan.md  SETU_Final_Development_Plan (1).md  Setu.dc.html  design-index.html  design-readme.md  implementation_plan.md
apps/api/: DEPLOY.md  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_add_telegram_chat_id.py  0003_add_consents.py  0004_add_reminders.py  0005_add_document_retention.py  0006_add_supabase_user_id.py  0007_add_triage_results.py  0008_add_providers.py  0009_add_appointments.py  0010_add_audit_and_health_workers.py  0011_add_vitals.py  0012_add_provider_phone.py  0013_production_platform.py  0014_demo_remaining.py  0015_add_onboarding_completed.py
apps/api/app/: auth.py  config.py  deps.py  errors.py  ids.py  jobs_store.py  main.py
apps/api/app/db/: models.py  session.py
apps/api/app/routers/: admin_appointments_router.py  admin_patients_router.py  brief.py  (+29 more)
apps/api/scripts/: check_db.py  check_db_state.py  create_dev_admin.py  export_openapi.py  find_pooler.py  generate_vapid.py  register_telegram_webhook.py  run_seed.py  try_direct_db.py  try_pooler_ports.py
apps/api/tests/: conftest.py  test_admin_appointments.py  test_admin_providers.py  test_admin_users.py  test_analytics.py  test_api_e2e.py  test_appointments.py  test_audit.py  test_auth_required.py  test_brief_access.py  test_brief_flags.py  test_consent.py  test_contract.py  test_demo_mode.py  test_disclaimer_once.py  test_encounters.py  test_exports.py  test_health_worker.py  test_hindi.py  test_jobs_auth.py  test_notifications.py  test_pipeline_smoke.py  test_priority.py  test_providers.py  test_reducer.py  test_reminders.py  test_replace_reminders_scope.py  test_retention.py  test_saathi.py  test_supabase_admin.py  test_triage.py  test_upload_pipeline.py  test_validation.py  test_validation_type_gate.py  test_vitals.py
(+241 files in other folders)
