[project]
name = "setu-api"
version = "0.1.0"
description = "SETU — medical document intelligence backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "segno>=1.6",
    "google-genai>=2.0.0",
    "PyJWT>=2.8",
    "pywebpush>=2.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
